src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
}

main {
  padding: 1rem;
}

.h-100svh {
  height: 100svh;
}

.w-100svw {
  width: 100svw;
}

[dir='rtl'] .rtm.navbar .rtm.navbar-body,
[dir='rtl'] .rtm.navbar .rtm.navbar-central-block {
  flex-direction: row-reverse;
}

[dir='rtl'] .rtm.sidebar .rtm.sidebar-body {
  flex-direction: row-reverse;
}

